src/wrapper_refcounted/torch_refcounted_api_generated.h

value atg_slice(value self, int64_t dim, value start, value end, int64_t step);
value atg_slice_backward(value grad_output, value input_sizes, int64_t dim, int64_t start, int64_t end, int64_t step);
value atg_slice_backward_out(value out, value grad_output, value input_sizes, int64_t dim, int64_t start, int64_t end, int64_t step);
value atg_slice_copy(value self, int64_t dim, value start, value end, int64_t step);
value atg_slice_copy_tensor_out(value out, value self, int64_t dim, value start, value end, int64_t step);
value atg_slice_inverse(value self, value src, int64_t dim, value start, value end, int64_t step);
value atg_slice_scatter(value self, value src, int64_t dim, value start, value end, int64_t step);
value atg_slice_scatter_out(value out, value self, value src, int64_t dim, value start, value end, int64_t step);
value atg_slogdet(value self);
value atg_slogdet_out(value sign, value logabsdet, value self);
value atg_slow_conv3d(value self, value weight, value kernel_size, value bias, value stride, value padding);
value atg_slow_conv3d_out(value out, value self, value weight, value kernel_size, value bias, value stride, value padding);
value atg_slow_conv_dilated2d(value self, value weight, value kernel_size, value bias, value stride, value padding, value dilation);
value atg_slow_conv_dilated2d_out(value out, value self, value weight, value kernel_size, value bias, value stride, value padding, value dilation);
value atg_slow_conv_dilated3d(value self, value weight, value kernel_size, value bias, value stride, value padding, value dilation);
value atg_slow_conv_dilated3d_out(value out, value self, value weight, value kernel_size, value bias, value stride, value padding, value dilation);
value atg_slow_conv_transpose2d(value self, value weight, value kernel_size, value bias, value stride, value padding, value output_padding, value dilation);
value atg_slow_conv_transpose2d_out(value out, value self, value weight, value kernel_size, value bias, value stride, value padding, value output_padding, value dilation);
value atg_slow_conv_transpose3d(value self, value weight, value kernel_size, value bias, value stride, value padding, value output_padding, value dilation);
value atg_slow_conv_transpose3d_out(value out, value self, value weight, value kernel_size, value bias, value stride, value padding, value output_padding, value dilation);
value atg_smm(value self, value mat2);
value atg_smooth_l1_loss(value self, value target, int64_t reduction, double beta);
value atg_smooth_l1_loss_backward(value grad_output, value self, value target, int64_t reduction, double beta);
value atg_smooth_l1_loss_backward_grad_input(value grad_input, value grad_output, value self, value target, int64_t reduction, double beta);
value atg_smooth_l1_loss_out(value out, value self, value target, int64_t reduction, double beta);
value atg_soft_margin_loss(value self, value target, int64_t reduction);
value atg_soft_margin_loss_backward(value grad_output, value self, value target, int64_t reduction);
value atg_soft_margin_loss_backward_grad_input(value grad_input, value grad_output, value self, value target, int64_t reduction);
value atg_soft_margin_loss_out(value out, value self, value target, int64_t reduction);
value atg_softmax(value self, int64_t dim, int dtype);
value atg_softmax_int_out(value out, value self, int64_t dim, int dtype);
value atg_softplus(value self, value beta, value threshold);
value atg_softplus_backward(value grad_output, value self, value beta, value threshold);
value atg_softplus_backward_grad_input(value grad_input, value grad_output, value self, value beta, value threshold);
value atg_softplus_out(value out, value self, value beta, value threshold);
value atg_softshrink(value self, value lambd);
value atg_softshrink_backward(value grad_output, value self, value lambd);
value atg_softshrink_backward_grad_input(value grad_input, value grad_output, value self, value lambd);
value atg_softshrink_out(value out, value self, value lambd);
value atg_sort(value self, int64_t dim, int descending);
value atg_sort_stable(value self, int stable, int64_t dim, int descending);
value atg_sort_values(value values, value indices, value self, int64_t dim, int descending);
value atg_sort_values_stable(value values, value indices, value self, int stable, int64_t dim, int descending);
value atg_sparse_bsc_tensor(value ccol_indices, value row_indices, value values, int options_kind, int options_device);
value atg_sparse_bsc_tensor_ccol_row_value_size(value ccol_indices, value row_indices, value values, value size, int options_kind, int options_device);
value atg_sparse_bsr_tensor(value crow_indices, value col_indices, value values, int options_kind, int options_device);
value atg_sparse_bsr_tensor_crow_col_value_size(value crow_indices, value col_indices, value values, value size, int options_kind, int options_device);
value atg_sparse_compressed_tensor(value compressed_indices, value plain_indices, value values, int options_kind, int options_device);
value atg_sparse_compressed_tensor_comp_plain_value_size(value compressed_indices, value plain_indices, value values, value size, int options_kind, int options_device);
value atg_sparse_coo_tensor(value size, int options_kind, int options_device);
value atg_sparse_coo_tensor_indices(value indices, value values, int options_kind, int options_device, int is_coalesced);
value atg_sparse_coo_tensor_indices_size(value indices, value values, value size, int options_kind, int options_device, int is_coalesced);
value atg_sparse_coo_tensor_size_out(value out, value size);