src/bindings/torch_bindings_generated6.ml


  let stubs_slice =
    foreign
      "atg_slice"
      (gc_tensor
       @-> int64_t
       @-> int64_t
       @-> int
       @-> int64_t
       @-> int
       @-> int64_t
       @-> returning raw_tensor)
  ;;

  let stubs_slice_backward =
    foreign
      "atg_slice_backward"
      (gc_tensor
       @-> ptr int64_t
       @-> int
       @-> int64_t
       @-> int64_t
       @-> int64_t
       @-> int64_t
       @-> returning raw_tensor)
  ;;

  let stubs_slice_backward_out =
    foreign
      "atg_slice_backward_out"
      (gc_tensor
       @-> gc_tensor
       @-> ptr int64_t
       @-> int
       @-> int64_t
       @-> int64_t
       @-> int64_t
       @-> int64_t
       @-> returning raw_tensor)
  ;;

  let stubs_slice_copy =
    foreign
      "atg_slice_copy"
      (gc_tensor
       @-> int64_t
       @-> int64_t
       @-> int
       @-> int64_t
       @-> int
       @-> int64_t
       @-> returning raw_tensor)
  ;;

  let stubs_slice_copy_tensor_out =
    foreign
      "atg_slice_copy_tensor_out"
      (gc_tensor
       @-> gc_tensor
       @-> int64_t
       @-> int64_t
       @-> int
       @-> int64_t
       @-> int
       @-> int64_t
       @-> returning raw_tensor)
  ;;

  let stubs_slice_inverse =
    foreign
      "atg_slice_inverse"
      (gc_tensor
       @-> gc_tensor
       @-> int64_t
       @-> int64_t
       @-> int
       @-> int64_t
       @-> int
       @-> int64_t
       @-> returning raw_tensor)
  ;;

  let stubs_slice_scatter =
    foreign
      "atg_slice_scatter"
      (gc_tensor
       @-> gc_tensor
       @-> int64_t
       @-> int64_t
       @-> int
       @-> int64_t
       @-> int
       @-> int64_t
       @-> returning raw_tensor)
  ;;

  let stubs_slice_scatter_out =
    foreign
      "atg_slice_scatter_out"
      (gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> int64_t
       @-> int64_t
       @-> int
       @-> int64_t
       @-> int
       @-> int64_t
       @-> returning raw_tensor)
  ;;

  let stubs_slogdet =
    foreign "atg_slogdet" (ptr raw_tensor @-> gc_tensor @-> returning void)
  ;;

  let stubs_slogdet_out =
    foreign
      "atg_slogdet_out"
      (ptr raw_tensor @-> gc_tensor @-> gc_tensor @-> gc_tensor @-> returning void)
  ;;

  let stubs_slow_conv3d =
    foreign
      "atg_slow_conv3d"
      (gc_tensor
       @-> gc_tensor
       @-> ptr int64_t
       @-> int
       @-> gc_tensor
       @-> ptr int64_t
       @-> int
       @-> ptr int64_t
       @-> int
       @-> returning raw_tensor)
  ;;

  let stubs_slow_conv3d_out =
    foreign
      "atg_slow_conv3d_out"
      (gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> ptr int64_t
       @-> int
       @-> gc_tensor
       @-> ptr int64_t
       @-> int
       @-> ptr int64_t
       @-> int
       @-> returning raw_tensor)
  ;;

  let stubs_slow_conv_dilated2d =
    foreign
      "atg_slow_conv_dilated2d"
      (gc_tensor
       @-> gc_tensor
       @-> ptr int64_t
       @-> int
       @-> gc_tensor
       @-> ptr int64_t
       @-> int
       @-> ptr int64_t
       @-> int
       @-> ptr int64_t
       @-> int
       @-> returning raw_tensor)
  ;;

  let stubs_slow_conv_dilated2d_out =
    foreign
      "atg_slow_conv_dilated2d_out"
      (gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> ptr int64_t
       @-> int
       @-> gc_tensor
       @-> ptr int64_t
       @-> int
       @-> ptr int64_t
       @-> int
       @-> ptr int64_t
       @-> int
       @-> returning raw_tensor)
  ;;

  let stubs_slow_conv_dilated3d =
    foreign
      "atg_slow_conv_dilated3d"
      (gc_tensor
       @-> gc_tensor
       @-> ptr int64_t
       @-> int
       @-> gc_tensor
       @-> ptr int64_t
       @-> int
       @-> ptr int64_t
       @-> int
       @-> ptr int64_t
       @-> int
       @-> returning raw_tensor)
  ;;

  let stubs_slow_conv_dilated3d_out =
    foreign
      "atg_slow_conv_dilated3d_out"
      (gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> ptr int64_t
       @-> int
       @-> gc_tensor
       @-> ptr int64_t
       @-> int
       @-> ptr int64_t
       @-> int
       @-> ptr int64_t
       @-> int
       @-> returning raw_tensor)
  ;;

  let stubs_slow_conv_transpose2d =
    foreign
      "atg_slow_conv_transpose2d"
      (gc_tensor
       @-> gc_tensor
       @-> ptr int64_t
       @-> int
       @-> gc_tensor
       @-> ptr int64_t
       @-> int
       @-> ptr int64_t
       @-> int
       @-> ptr int64_t
       @-> int
       @-> ptr int64_t
       @-> int
       @-> returning raw_tensor)
  ;;

  let stubs_slow_conv_transpose2d_out =
    foreign
      "atg_slow_conv_transpose2d_out"
      (gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> ptr int64_t
       @-> int
       @-> gc_tensor
       @-> ptr int64_t
       @-> int
       @-> ptr int64_t
       @-> int
       @-> ptr int64_t
       @-> int
       @-> ptr int64_t
       @-> int
       @-> returning raw_tensor)
  ;;

  let stubs_slow_conv_transpose3d =
    foreign
      "atg_slow_conv_transpose3d"
      (gc_tensor
       @-> gc_tensor
       @-> ptr int64_t
       @-> int
       @-> gc_tensor
       @-> ptr int64_t
       @-> int
       @-> ptr int64_t
       @-> int
       @-> ptr int64_t
       @-> int
       @-> ptr int64_t
       @-> int
       @-> returning raw_tensor)
  ;;

  let stubs_slow_conv_transpose3d_out =
    foreign
      "atg_slow_conv_transpose3d_out"
      (gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> ptr int64_t
       @-> int
       @-> gc_tensor
       @-> ptr int64_t
       @-> int
       @-> ptr int64_t
       @-> int
       @-> ptr int64_t
       @-> int
       @-> ptr int64_t
       @-> int
       @-> returning raw_tensor)
  ;;

  let stubs_smm = foreign "atg_smm" (gc_tensor @-> gc_tensor @-> returning raw_tensor)

  let stubs_smooth_l1_loss =
    foreign
      "atg_smooth_l1_loss"
      (gc_tensor @-> gc_tensor @-> int64_t @-> double @-> returning raw_tensor)
  ;;

  let stubs_smooth_l1_loss_backward =
    foreign
      "atg_smooth_l1_loss_backward"
      (gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> int64_t
       @-> double
       @-> returning raw_tensor)
  ;;

  let stubs_smooth_l1_loss_backward_grad_input =
    foreign
      "atg_smooth_l1_loss_backward_grad_input"
      (gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> int64_t
       @-> double
       @-> returning raw_tensor)
  ;;

  let stubs_smooth_l1_loss_out =
    foreign
      "atg_smooth_l1_loss_out"
      (gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> int64_t
       @-> double
       @-> returning raw_tensor)
  ;;

  let stubs_soft_margin_loss =
    foreign
      "atg_soft_margin_loss"
      (gc_tensor @-> gc_tensor @-> int64_t @-> returning raw_tensor)
  ;;

  let stubs_soft_margin_loss_backward =
    foreign
      "atg_soft_margin_loss_backward"
      (gc_tensor @-> gc_tensor @-> gc_tensor @-> int64_t @-> returning raw_tensor)
  ;;

  let stubs_soft_margin_loss_backward_grad_input =
    foreign
      "atg_soft_margin_loss_backward_grad_input"
      (gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> int64_t
       @-> returning raw_tensor)
  ;;

  let stubs_soft_margin_loss_out =
    foreign
      "atg_soft_margin_loss_out"
      (gc_tensor @-> gc_tensor @-> gc_tensor @-> int64_t @-> returning raw_tensor)
  ;;

  let stubs_softmax =
    foreign "atg_softmax" (gc_tensor @-> int64_t @-> int @-> returning raw_tensor)
  ;;

  let stubs_softmax_int_out =
    foreign
      "atg_softmax_int_out"
      (gc_tensor @-> gc_tensor @-> int64_t @-> int @-> returning raw_tensor)
  ;;

  let stubs_softplus =
    foreign "atg_softplus" (gc_tensor @-> scalar @-> scalar @-> returning raw_tensor)
  ;;

  let stubs_softplus_backward =
    foreign
      "atg_softplus_backward"
      (gc_tensor @-> gc_tensor @-> scalar @-> scalar @-> returning raw_tensor)
  ;;

  let stubs_softplus_backward_grad_input =
    foreign
      "atg_softplus_backward_grad_input"
      (gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> scalar
       @-> scalar
       @-> returning raw_tensor)
  ;;

  let stubs_softplus_out =
    foreign
      "atg_softplus_out"
      (gc_tensor @-> gc_tensor @-> scalar @-> scalar @-> returning raw_tensor)
  ;;

  let stubs_softshrink =
    foreign "atg_softshrink" (gc_tensor @-> scalar @-> returning raw_tensor)
  ;;

  let stubs_softshrink_backward =
    foreign
      "atg_softshrink_backward"
      (gc_tensor @-> gc_tensor @-> scalar @-> returning raw_tensor)
  ;;

  let stubs_softshrink_backward_grad_input =
    foreign
      "atg_softshrink_backward_grad_input"
      (gc_tensor @-> gc_tensor @-> gc_tensor @-> scalar @-> returning raw_tensor)
  ;;

  let stubs_softshrink_out =
    foreign
      "atg_softshrink_out"
      (gc_tensor @-> gc_tensor @-> scalar @-> returning raw_tensor)
  ;;

  let stubs_sort =
    foreign
      "atg_sort"
      (ptr raw_tensor @-> gc_tensor @-> int64_t @-> int @-> returning void)
  ;;

  let stubs_sort_stable =
    foreign
      "atg_sort_stable"
      (ptr raw_tensor @-> gc_tensor @-> int @-> int64_t @-> int @-> returning void)
  ;;

  let stubs_sort_values =
    foreign
      "atg_sort_values"
      (ptr raw_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> int64_t
       @-> int
       @-> returning void)
  ;;
end

module C2 (F : Cstubs.FOREIGN) = struct
  open F
  open Type_defs

  let stubs_sort_values_stable =
    foreign
      "atg_sort_values_stable"
      (ptr raw_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> int
       @-> int64_t
       @-> int
       @-> returning void)
  ;;

  let stubs_sparse_bsc_tensor =
    foreign
      "atg_sparse_bsc_tensor"
      (gc_tensor @-> gc_tensor @-> gc_tensor @-> int @-> int @-> returning raw_tensor)
  ;;

  let stubs_sparse_bsc_tensor_ccol_row_value_size =
    foreign
      "atg_sparse_bsc_tensor_ccol_row_value_size"
      (gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> ptr int64_t
       @-> int
       @-> int
       @-> int
       @-> returning raw_tensor)
  ;;

  let stubs_sparse_bsr_tensor =
    foreign
      "atg_sparse_bsr_tensor"
      (gc_tensor @-> gc_tensor @-> gc_tensor @-> int @-> int @-> returning raw_tensor)
  ;;

  let stubs_sparse_bsr_tensor_crow_col_value_size =
    foreign
      "atg_sparse_bsr_tensor_crow_col_value_size"
      (gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> ptr int64_t
       @-> int
       @-> int
       @-> int
       @-> returning raw_tensor)
  ;;

  let stubs_sparse_compressed_tensor =
    foreign
      "atg_sparse_compressed_tensor"
      (gc_tensor @-> gc_tensor @-> gc_tensor @-> int @-> int @-> returning raw_tensor)
  ;;

  let stubs_sparse_compressed_tensor_comp_plain_value_size =
    foreign
      "atg_sparse_compressed_tensor_comp_plain_value_size"
      (gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> ptr int64_t
       @-> int
       @-> int
       @-> int
       @-> returning raw_tensor)
  ;;

  let stubs_sparse_coo_tensor =
    foreign
      "atg_sparse_coo_tensor"
      (ptr int64_t @-> int @-> int @-> int @-> returning raw_tensor)
  ;;

  let stubs_sparse_coo_tensor_indices =
    foreign
      "atg_sparse_coo_tensor_indices"
      (gc_tensor @-> gc_tensor @-> int @-> int @-> int @-> returning raw_tensor)
  ;;

  let stubs_sparse_coo_tensor_indices_size =
    foreign
      "atg_sparse_coo_tensor_indices_size"
      (gc_tensor
       @-> gc_tensor
       @-> ptr int64_t
       @-> int
       @-> int
       @-> int
       @-> int
       @-> returning raw_tensor)
  ;;

  let stubs_sparse_coo_tensor_size_out =
    foreign
      "atg_sparse_coo_tensor_size_out"
      (gc_tensor @-> ptr int64_t @-> int @-> returning raw_tensor)
  ;;
